Resources/Public/Stylesheet/ThemeSelector.css
.fixfloat {
	clear: both;
}
.tx_themes_themeselector .t3-icon, .tx_themes_themeselector .tx_skinselector_availableThemes .previewImage {
	cursor: pointer;
}

.tx_themes_themeselector ul li {
	width: 130px;
	height: 120px;
	float: left;
	display: inline-block;
	clear: none;
	border: 1px solid #c0c0c0;
	margin-right: 20px;
	margin-bottom: 20px;
	position: relative;
}
.tx_themes_themeselector .selectedTheme {
	width: 495px;
}
.tx_themes_themeselector .previewDescription {
	float: right;
	width: 340px;
}
.tx_themes_themeselector .previewImage {
	background-color: #B7B7B7;
	background-color:rgba(183,183,183,0.5);
	width: 130px;
	height: 76px;
	margin-bottom: 10px;
	overflow: hidden;
}

.tx_themes_themeselector .previewImage img {
	width: 130px;
}
	
.tx_themes_themeselector .previewTheme .previewOverlay {
	display: none;
}

.tx_themes_themeselector .previewTheme:hover .previewOverlay {
	position: absolute;
	top: 140px;
	left: -1px;
	width: 130px;
	height: 80px;
	border: 1px solid #c0c0c0;
	background-color: #ececec;
	display: block;
	z-index: 999;
	padding: 10px;
	border-top: none;
	overflow: hidden;
}

.tx_themes_themeselector .previewTheme .previewOverlay p {
	padding-top: 15px;
}

.previewTheme {
	padding: 10px;
}

